cmake_minimum_required(VERSION 3.15)

# 项目信息
project (TestVtkMaster
         VERSION 1.0.0.0
         LANGUAGES CXX
)

## 输出目录
### 静态库输出目录
set(ARCHIVE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
### 可执行文件输出目录
set(RUNTIME_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
### 动态库输出目录
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${ARCHIVE_OUTPUT_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${ARCHIVE_OUTPUT_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${LIBRARY_OUTPUT_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${LIBRARY_OUTPUT_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${RUNTIME_OUTPUT_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${RUNTIME_OUTPUT_PATH})
set(QML_MODULE_INSTALL_PATH ${CMAKE_SOURCE_DIR}/build/qmlModule)

# 配置编译选项
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(CMAKE_BUILD_TYPE AND (CMAKE_BUILD_TYPE STREQUAL "Debug"))
    list(APPEND CMAKE_PREFIX_PATH D:/VTK_/master/debug/lib/cmake/vtk-9.2)
elseif(CMAKE_BUILD_TYPE AND (CMAKE_BUILD_TYPE STREQUAL "Release"))
    list(APPEND CMAKE_PREFIX_PATH D:/VTK_/master/release/lib/cmake/vtk-9.2)
else()
    message("Missing parameter: -DCMAKE_BUILD_TYPE=Debug(/Release)")
endif()

find_package(VTK REQUIRED)
find_package(Qt6 COMPONENTS Core Gui Qml Quick REQUIRED)

message (STATUS "VTK_VERSION: ${VTK_VERSION}")
message (STATUS "VTK_DIR: ${VTK_DIR}")
message (STATUS "Qt6_DIR: ${Qt6_DIR}")

add_subdirectory(./TestCpp)
add_subdirectory(./TestCyLinder)
